# radon-monitor

./: .coveragerc  .gitignore  .zenodo.json  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Installer.nsi  LICENSE.txt  README.md  README.rst  cape_grim_like.ini  pyproject.toml  run_uic.bat  run_uic.sh  sample_config.ini  sample_config.yaml  setup.cfg  setup.py
.github/workflows/: pyinstaller.yml
data-one-mock-detector/csv/: TESTAug23.CSV  TESTJul23.CSV  TESTNov23.CSV  TESTOct23.CSV  TESTSep23.CSV
docs/: conf.py  index.rst
logger-firmware/: CR800_ATMOS14.CR8  CR800_MAR08.CR8  CR800_MAR08_old_sensors.CR8  CR800_MAR08_sdi12.CR8  radon-detector.CR300
scripts/: Installer.nsi  build_windows_installer.bat  gen_spec_file.bat  run_nsis.bat  run_pyinstaller.bat  setup_build_environment.bat  setup_dev_environment.bat
src/: RDM.spec  file_version_info.txt
src/ansto_radon_monitor/: __init__.py  burkert_gateway.py  calbox_device.py  configuration.py  data_util.py  database_util.py  datastore.py  flag_calc.py  html.py  labjack_interface.py  link.py  main.py  main_controller.py  scheduler_threads.py  skeleton.py  udp_broadcast.py
src/ansto_radon_monitor/gui/: c_and_b.py  cal_bg_start_time_widget.py  calibration_history_dialog.py  data_plotter.py  data_view.py  main.py  mainwindow.py  sensitivity_sweep.py  system_information.py  task_status_dialog.py  ui_c_and_b.py  ui_cal_bg_start_time_widget.py  ui_data_view.py  ui_mainwindow.py  ui_sensitivity_sweep.py  ui_system_information.py
src/ansto_radon_monitor/openrvdas_udp/: __init__.py  formats.py  reader.py  udp_reader.py  udp_writer.py  writer.py
tests/: conftest.py  cr1000_tdf_test.py  custom_serial_link.py  test_config.py  test_cr1000_forpatch.py  test_cr1000_funcs.py  test_cr1000_minimal.py  test_cr1000_no_pylink.py  test_datastore.py  test_labjack.py  test_main_controller.py  test_pakbus_table_def.py  test_skeleton.py
ui/: c_and_b.ui  main_window.ui  sensitivity_sweep.ui
user-docs/: configuring-a-site.md  data-handling.md
